--- a/index.html
+++ b/index.html
@@ -9,13 +9,35 @@
         <h1>My Portfolio</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="#about">About</a></li>
             </ul>
         </nav>
     </header>
     <div class="container">
-        <h2>Welcome to My Portfolio</h2>
-        <p>This is my online portfolio.</p>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Write a brief description about yourself here. Mention your skills, experience, and interests.</p>
+        </section>
+        <section id="projects">
+            <h2>My Projects</h2>
+            <div class="project">
+                <h3>Project 1</h3>
+                <p>Description of Project 1.</p>
+            </div>
+            <div class="project">
+                <h3>Project 2</h3>
+                <p>Description of Project 2.</p>
+            </div>
+            <div class="project">
+                <h3>Project 3</h3>
+                <p>Description of Project 3.</p>
+            </div>
+        </section>
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <p>Email: example@example.com</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile/">yourprofile</a></p>
+        </section>
     </div>
     <footer>
         <p>&copy; 2024 My Portfolio</p>
