--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.scss">
 </head>
 <body>
     <header>
