silly mistakes fixes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <title>My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.scss">
     <style>
         body {
             margin: 0;
@@ -58,5 +57,6 @@
     <footer>
         <p>&copy; 2024 My Portfolio</p>
     </footer>
+    <script src="js/neuronAnimation.js"></script>
 </body>
 </html>
