--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
     <style>
         body {
             margin: 0;
+            padding: 0;
             overflow: hidden;
+            background-color: #101010;
+            width: 100%;
+            height: 100%;
         }
         canvas {
             position: absolute;
             top: 0;
             left: 0;
+            width: 100%;
+            height: 100%;
             z-index: -1;
+            filter: blur(1.2px);
         }
     </style>
 </head>
